# analyser-tytos

./: .cursor.rules  .env  .env.example  .gitignore  2025-07-18-this-session-is-being-continued-from-a-previous-co.txt  ACTUAL_BUG_FOUND.md  ANALYSIS_REPORT.md  API_DESCRIPTION.md  API_ENDPOINTS_DOCUMENTATION.md  API_FRONTEND_GUIDE.md  API_TEST_RESULTS.md  ARCHITECTURE.md  AUTHENTICATION_STRATEGY.md  BATCH_JOB_FAILURE_TRACKING.md  BATCH_VS_CONTINUOUS_MODE_ANALYSIS.md  BIRDEYE_DATA_UNDERSTANDING.md  BUG_ROOT_CAUSE_ANALYSIS.md  CLAUDE.md  CODEBASE_WALKTHROUGH.md  COMPLETE_SYSTEM_FLOW_BREAKDOWN.md  COMPREHENSIVE_CODE_AUDIT.md  COMPREHENSIVE_DATA_ANALYSIS_FINDINGS.md  COPY_TRADING_METRICS_IMPLEMENTATION.md  CRITICAL_CODE_AUDIT.md  CRITICAL_FIX_COMPLETED.md  CRITICAL_TRANSACTION_ANALYSIS.md  CRITICAL_VERIFICATION_REPORT.md  Cargo.toml  DEBUG_SUMMARY.md  DEEP_CODE_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_COMPLETE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_UPDATE_POSTGRESQL.md  DUAL_EVENT_ANALYSIS_FINAL.md  DUAL_EVENT_SYSTEM_COMPLETE.md  DUPLICATE_HASH_RESEARCH_FINDINGS.md  FIFO_MATCHING_BUG_FIX.md  FINAL_CURRENCY_RECOMMENDATION.md  FIXES_IMPLEMENTED.md  (+243 more)
.claude/agents/: system-architect-reviewer.md
api_server/: 2025-07-19-this-session-is-being-continued-from-a-previous-co.txt  Cargo.toml
api_server/src/: handlers.rs  main.rs  middleware.rs  service_manager.rs  types.rs
api_server/src/v2/: handlers.rs  mod.rs  routes.rs  types.rs
balance_test/: Cargo.toml
balance_test/src/: main.rs
config_manager/: Cargo.toml
config_manager/src/: lib.rs
dex_client/: Cargo.toml
dex_client/src/: birdeye_client.rs  dexscreener_client.rs  helius_client.rs  history_trait_impl.rs  lib.rs  lib_fixed.rs  price_enricher.rs  price_fetching_service.rs  token_metadata_service.rs  trending_client.rs  types.rs
dex_client/tests/: api_parsing_test.rs  social_parsing_test.rs  token_pairs_test.rs
docs/: api_v2_documentation.md  messagepack-implementation-plan.md  pnl_algorithm_documentation.md
frontend/: README.md  eslint.config.js  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/(dashboard)/dex/: page.tsx
frontend/app/(dashboard)/jobs/: page.tsx
frontend/app/(dashboard)/monitoring/: page.tsx
frontend/app/(dashboard)/results/: page.tsx
frontend/app/(dashboard)/services/: page.tsx
frontend/app/wallet/[address]/: page.tsx
frontend/src/: index.css
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/charts/: MetricsChart.tsx
frontend/src/components/icons/: WalletIcon.tsx
frontend/src/components/layout/: DashboardLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/search/: GlobalWalletSearch.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  loading-spinner.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: api.ts  socket.ts  utils.ts
frontend/src/providers/: QueryProvider.tsx  SocketProvider.tsx
frontend/src/store/: auth.ts  ui.ts
frontend/src/types/: api.ts
goldrush_client/: Cargo.toml
goldrush_client/src/: client.rs  error.rs  financial_event_converter.rs  lib.rs  parser.rs  types.rs
job_orchestrator/: Cargo.toml
job_orchestrator/src/: birdeye_trending_orchestrator.rs  lib.rs  trending_orchestrator.rs
job_orchestrator/tests/: parsing_verification.rs  token_to_token_fix_verification.rs
jprice_client/: Cargo.toml
jprice_client/src/: birdeye_price_fetcher.rs  lib.rs  lib_fixed.rs
migrations/: 001_add_batch_job_failure_tracking.sql  README_ROI_MIGRATION.md  add_incomplete_trades_count.sql  add_incomplete_trades_count_production.sql  add_roi_percentage_column.sql  add_roi_percentage_column_fixed.sql  add_roi_percentage_column_safe.sql  add_roi_percentage_column_skip_bad.sql  add_transaction_fetch_metadata.sql
persistence_layer/: Cargo.toml
persistence_layer/src/: lib.rs  postgres_client.rs
pnl_core/: Cargo.toml
pnl_core/src/: balance_fetcher.rs  comprehensive_tests.rs  fifo_pnl_engine.rs  history_parser.rs  lib.rs  new_parser.rs  new_pnl_engine.rs  partial_fifo.rs  phantom_buy_fix_test.rs  timeframe.rs  trader_filter.rs  zerion_balance_fetcher.rs
retry_utils/: Cargo.toml
retry_utils/src/: lib.rs
solana_client/: Cargo.toml
solana_client/src/: lib.rs  lib_fixed.rs
src/: main.rs
test_integration/: Cargo.toml
test_integration/src/: main.rs
test_redis_integration/: Cargo.toml
test_redis_integration/src/: main.rs
tx_parser/: Cargo.toml
tx_parser/src/: lib.rs  lib_broken.rs  solana_tx_processor.rs
zerion_client/: Cargo.toml
zerion_client/src/: lib.rs  time_utils.rs
