[package]
name = "pnl_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config_manager = { path = "config_manager" }
job_orchestrator = { path = "job_orchestrator" }
dex_client = { path = "dex_client" }
persistence_layer = { path = "persistence_layer" }
pnl_core = { path = "pnl_core" }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
rust_decimal = { version = "1.35", features = ["serde-with-str"] }

[[bin]]
name = "end_to_end_full_test"
path = "end_to_end_full_test.rs"

[[bin]]
name = "test_birdeye_api"
path = "test_birdeye_api.rs"

[[bin]]
name = "test_conversion"
path = "test_conversion.rs"


[workspace]
resolver = "2"
members = [
    "pnl_core",
    "dex_client",
    "persistence_layer",
    "api_server",
    "config_manager",
    "job_orchestrator",
]

