[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local crates
config_manager = { path = "../config_manager" }
job_orchestrator = { path = "../job_orchestrator" }
pnl_core = { path = "../pnl_core" }
dex_client = { path = "../dex_client" }
persistence_layer = { path = "../persistence_layer" }

# Web framework and async runtime
axum = { version = "0.7", features = ["json", "query"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization and JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Decimal numbers
rust_decimal = { version = "1.35", features = ["serde-with-str"] }

# CSV export
csv = "1.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async utilities
futures = "0.3"
