[package]
name = "dex_client"
version = "0.1.0"
edition = "2021"

[dependencies]
persistence_layer = { path = "../persistence_layer" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
url = "2.4"
base64 = "0.21"
regex = "1.10"
hex = "0.4"
futures-util = "0.3"
num-bigint = "0.4"
rand = "0.8"
