[package]
name = "dex_client"
version = "0.1.0"
edition = "2021"

[dependencies]
config_manager = { path = "../config_manager" }
persistence_layer = { path = "../persistence_layer" }
pnl_core = { path = "../pnl_core" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
rust_decimal = { version = "1.0", features = ["serde-with-str"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
base64 = "0.21"
regex = "1.10"
hex = "0.4"
futures-util = "0.3"
num-bigint = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
# ChromiumOxide for DexScreener scraping
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
futures = "0.3"
