[package]
name = "goldrush_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
url = "2.5"
tracing = "0.1"
rust_decimal = { version = "1.35", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }
pnl_core = { path = "../pnl_core" }