[package]
name = "job_orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
pnl_core = { path = "../pnl_core" }
solana_client = { path = "../solana_client" }
dex_client = { path = "../dex_client" }
tx_parser = { path = "../tx_parser" }
jprice_client = { path = "../jprice_client" }
persistence_layer = { path = "../persistence_layer" }
config_manager = { path = "../config_manager" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
