[package]
name = "job_orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
pnl_core = { path = "../pnl_core" }
dex_client = { path = "../dex_client" }
persistence_layer = { path = "../persistence_layer" }
config_manager = { path = "../config_manager" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
hostname = "0.3"
