[package]
name = "jprice_client"
version = "0.1.0"
edition = "2021"

[dependencies]
pnl_core = { path = "../pnl_core" }
persistence_layer = { path = "../persistence_layer" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
async-trait = "0.1"