[package]
name = "persistence_layer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local crates
pnl_core = { path = "../pnl_core" }

redis = { version = "0.32", features = ["tokio-comp"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
futures = "0.3"
