[package]
name = "pnl_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
config_manager = { path = "../config_manager" }
