[package]
name = "pnl_core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde-with-float"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
config_manager = { path = "../config_manager" }
regex = "1.5"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
