[package]
name = "tx_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
pnl_core = { path = "../pnl_core" }
solana_client = { path = "../solana_client" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
solana-sdk = "1.18"
solana-transaction-status = "1.18"
base64 = "0.21"
