[package]
name = "zerion_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }
futures = "0.3"

pnl_core = { path = "../pnl_core" }
persistence_layer = { path = "../persistence_layer" }
config_manager = { path = "../config_manager" }
retry_utils = { path = "../retry_utils" }
